--- a/06_列表渲染/test.html
+++ b/06_列表渲染/test.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>06_列表渲染</title>
 </head>
+
 <body>
 
-<!--
+  <!--
 1. 列表显示
   数组: v-for / index
   对象: v-for / key
@@ -15,16 +17,48 @@
   替换item
 -->
 
-<div id="demo">
-  <h2>测试: v-for 遍历数组</h2>
+  <div id="demo">
+    <h2>测试: v-for 遍历数组</h2>
+    <ul>
+      <li v-for="(item, index) in persons" :key="item.id">
+        {{item.id}} - {{item.name}} - {{item.age}}
+        - <button @click="deleteItem(index)">删除</button>
+        - <button @click="updateItem(index, {id: Date.now(), name: 'Fan', age: 20})">更新</button>
+      </li>
+    </ul>
+    <h2>测试: v-for 遍历对象</h2>
 
-  <h2>测试: v-for 遍历对象</h2>
+  </div>
 
-</div>
-
-<script type="text/javascript" src="../js/vue.js"></script>
-<script type="text/javascript">
-
-</script>
+  <script type="text/javascript" src="../js/vue.js"></script>
+  <script type="text/javascript">
+    new Vue({
+      el: "#demo",
+      data() {
+        return {
+          persons: [
+            { id: 1, name: "Fan", age: 20 },
+            { id: 2, name: "Tan", age: 10 },
+            { id: 3, name: "Wan", age: 25 },
+            { id: 4, name: "Van", age: 37 },
+            { id: 5, name: "Han", age: 19 }
+          ]
+        }
+      },
+      methods: {
+        deleteItem(index) {
+          this.persons.splice(index, 1) // splice 不是原生数组的方法，是 vue 重定义的
+        },
+        updateItem(index, newItem) {
+          this.persons.splice(index, 1, newItem);
+          //this.persons[index] = newItem; //数据变了，但页面不自动更新 --> 数据绑定失败
+          this.persons[index].id = newItem.id;
+          this.persons[index].name = newItem.name;
+          this.persons[index].age = newItem.age;
+        }
+      },
+    })
+  </script>
 </body>
+
 </html>
