--- a/03_计算属性和监视/test.html
+++ b/03_计算属性和监视/test.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>03_计算属性和监视</title>
 </head>
+
 <body>
-<!--
+  <!--
 1. 计算属性
   在computed属性对象中定义计算属性的方法
   在页面中使用{{方法名}}来显示计算的结果
@@ -16,17 +18,94 @@
   通过getter/setter实现对属性数据的显示和监视
   计算属性存在缓存, 多次读取只执行一次getter计算
 -->
-<div id="demo">
-  姓: <input type="text" placeholder="First Name"><br>
-  名: <input type="text" placeholder="Last Name"><br>
-  姓名1(单向): <input type="text" placeholder="Full Name1"><br>
-  姓名2(单向): <input type="text" placeholder="Full Name2"><br>
-  姓名3(双向): <input type="text" placeholder="Full Name3"><br>
-</div>
+  <div id="app">
+    姓: <input type="text" placeholder="First Name" v-model='firstName'><br>
+    名: <input type="text" placeholder="Last Name" v-model="lastName"><br>
+    姓名1(单向): <input type="text" placeholder="Full Name1" v-model="fullName1"><br>
+    姓名2(单向): <input type="text" placeholder="Full Name2" v-model="fullName2"><br>
+    姓名3(双向): <input type="text" placeholder="Full Name3" v-model="fullName3"><br>
+  </div>
 
-<script type="text/javascript" src="../js/vue.js"></script>
-<script type="text/javascript">
+  <script type="text/javascript" src="../js/vue.js"></script>
+  <script>
+    const vm = new Vue({
+      el: '#app',
+      data: {
+        firstName: '',
+        lastName: '',
+        fullName2: 'A-B'
+      },
+      //计算属性
+      computed: {
+        /*
+          什么时候执行？
+          1. 初始显示 执行一次
+          2. 依赖数据发生变化
+        */
+        fullName1() { //getter
+          console.log('fullName1()');
+          return this.firstName + '-' + this.lastName
+        },
+        fullName3: {
+          get() {
+            console.log('fullName3()');
+            return this.firstName + '-' + this.lastName
+          },
+          //当给fullName3指定新的值时自动调用
+          set(value) {
+            //更新firstName/lastName
+            const names = value.split('-');
+            this.firstName = names[0];
+            this.lastName = names[1];
+          }
+        }
+      },
+      watch: {
+        //当firstName的值发生改变时调用
+        firstName(value) {
+          console.log(value);
+          this.fullName2 = value + '-' + this.lastName
+        }
+      },
+    })
+    vm.$watch('lastName', function (value) {
+      console.log(value);
+      this.fullName2 = this.firstName + '-' + value;
+    })
 
-</script>
+  </script>
+  <!-- <script type="text/javascript">
+    // Object.defineProperty()
+    let p = {
+      first: 'A',
+      last: 'B'
+    }
+    /*
+      需求：
+      1.给p添加一个新的属性：full = fist + '-' + last
+      2.如果修改了fist/last，full自动改变为对应的值
+      3.如果修改了full，fist/last自动改变为对应的值
+    */
+    Object.defineProperty(p, 'full', { //配置对象 ==> 属性描述符
+      //当读取属性值时候自动调用，将函数的返回值作为属性，this是属性所在的对象
+      get() {
+        return this.first + '-' + this.last;
+      },
+      //当修改了属性值时候自动调用，用来监视属性值的变化，this是属性所在的对象
+      set(value) {
+        const names = value.split('-');
+        this.first = names[0];
+        this.last = names[1];
+      }
+    })
+    p.full = p.first + '-' + p.last;
+    console.log(p.full);
+    p.first = 'C';
+    p.last = 'D';
+    console.log(p.full);
+    p.full = 'E-F';
+    console.log(p.first, p.last);
+  </script> -->
 </body>
+
 </html>
