--- a/04_class与style绑定/test.html
+++ b/04_class与style绑定/test.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>04_class与style绑定</title>
@@ -7,17 +8,20 @@
     .classA {
       color: red;
     }
+
     .classB {
       background: blue;
     }
+
     .classC {
       font-size: 20px;
     }
   </style>
 </head>
+
 <body>
 
-<!--
+  <!--
 1. 理解
   在应用界面中, 某个(些)元素的样式是变化的
   class/style绑定就是专门用来实现动态样式效果的技术
@@ -30,16 +34,38 @@
   其中activeColor/fontSize是data属性
 -->
 
-<div id="demo">
-  <h2>1. class绑定: :class='xxx'</h2>
+  <div id="demo">
+    <h2>1. class绑定: :class='xxx'</h2>
+    <p class="classC" :class="myClass">xxxxxx</p> <!-- 取并集-->
+    <p :class="{ classA: hashA, classB: hashB}">xxxxx</p>
+    <p :class="[ 'classA', 'classB' ]">xxxxxxx</p>
+    <h2>2. style绑定</h2>
+    <p :style="{ color: myColor, fontSize: fontSize + 'px'}">yyyyyy</p>
+    <button @click="update">更新</button>
+  </div>
 
-  <h2>2. style绑定</h2>
-
-</div>
-
-<script type="text/javascript" src="../js/vue.js"></script>
-<script type="text/javascript">
-
-</script>
+  <script type="text/javascript" src="../js/vue.js"></script>
+  <script type="text/javascript">
+    new Vue({
+      el: '#demo',
+      data: {
+        myClass: 'classA',
+        hashA: false,
+        hashB: true,
+        myColor: 'red',
+        fontSize: 20
+      },
+      methods: {
+        update() {
+          this.myClass = 'classB';
+          this.hashA = !this.hashA;
+          this.hashB = !this.hashB;
+          this.myColor = 'pink';
+          this.fontSize = 30;
+        }
+      },
+    })
+  </script>
 </body>
+
 </html>
